# 39/internal/dto/dto.go
@@ -6,12 +6,16 @@ type CreateProductInput struct {
 }
 
 type CreateUserInput struct {
-	Name		 string `json:"name"`
-	Email		 string `json:"email"`
-	Password	 string `json:"password"`
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
 
 type GetJWTInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
+}
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
 }
