# 39/internal/infra/webserver/handlers/user_handlers.go
@@ -17,25 +17,26 @@ type Error struct {
 }
 
 type UserHandler struct {
-	UserDB       database.UserInterface
+	UserDB database.UserInterface
 }
 
 func NewUserHandler(userDB database.UserInterface) *UserHandler {
 	return &UserHandler{
-		UserDB:       userDB,
+		UserDB: userDB,
 	}
 }
 
 // Create user godoc
-// @Summary      Create user
-// @Description  Create user
-// @Tags         user
+// @Summary      Get a user JWT
+// @Description  Get a user JWT
+// @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        user  body     dto.CreateUserInput  true  "user request"
-// @Success      201
+// @Param        request  body   dto.GetJWTInput  true  "user credentials"
+// @Success      200  {object}  dto.GetJWTOutput
+// @Failure      404  {object}  Error
 // @Failure      500  {object}  Error
-// @Router       /users [post]
+// @Router       /users/generate_token [post]
 func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	jwtExpiresIn := r.Context().Value("jwt_expires_in").(int)
@@ -50,7 +51,9 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 
 	u, err := h.UserDB.FindByEmail(user.Email)
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+		w.WriteHeader(http.StatusNotFound)
+		err := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(err)
 		return
 	}
 
@@ -63,22 +66,17 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 		"sub": u.ID.String(),
 		"exp": time.Now().Add(time.Second * time.Duration(jwtExpiresIn)).Unix(),
 	})
-
-	acessToken := struct {
-		AccessToken string `json:"access_token"`
-	}{
-		AccessToken: tokenString,
-	}
+	accessToken := dto.GetJWTOutput{AccessToken: tokenString}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(acessToken)
+	json.NewEncoder(w).Encode(accessToken)
 }
 
 // Create user godoc
 // @Summary      Create user
 // @Description  Create user
-// @Tags         user
+// @Tags         users
 // @Accept       json
 // @Produce      json
 // @Param        request  body   dto.CreateUserInput  true  "user request"
@@ -99,7 +97,6 @@ func (h *UserHandler) Create(w http.ResponseWriter, r *http.Request) {
 		error := Error{Message: err.Error()}
 		json.NewEncoder(w).Encode(error)
 		return
-
 
 	}
 
